on lean4 for  hw10

--- a/cs511HwSolutions/hw10/latex/nicholas_ikechukwu.hw10.tex
+++ b/cs511HwSolutions/hw10/latex/nicholas_ikechukwu.hw10.tex
@@ -300,6 +300,7 @@ Similarly, for $G'_j$ with vertices $V'_j = \{1, 2, \ldots, n'_j\}$ and edges $E
 
 The two first-order sentences assert the existence of distinct vertices in $M$ that are connected according to the edge structure of $G_i$ or $G'_j$, respectively. If $M$ satisfies either of these sentences, it contains the corresponding subdivision as a subgraph.
 
+\newpage
 
 
 
